# auto-punch

./: README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
auto_punch/: config.py  log.py  notify.py
auto_punch/apollo/: client.py  login.py  punch.py  records.py
auto_punch/cli/: launchd.py  login.py  main.py  run.py  status.py
auto_punch/launchd/: com.carlos.auto-punch.evening.plist.tmpl  com.carlos.auto-punch.morning.plist.tmpl
auto_punch/schedule/: offset.py  skip.py
tests/: conftest.py  test_config.py  test_log.py  test_notify.py
tests/apollo/: test_client.py  test_login.py  test_punch.py  test_records.py
tests/cli/: test_launchd.py  test_login.py  test_main.py  test_run.py  test_status.py
tests/schedule/: test_offset.py  test_skip.py
